--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>pameladewitconsulting</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:200,300,400">
     <link rel="stylesheet" href="assets/css/scss/main.compiled.css">
@@ -44,21 +45,24 @@
                 <h2 class="text-center section-heading">Our Services</h2>
                 <div class="row">
                     <div class="col">
-                        <div class="card-group text-center">
-                            <div class="card"><img class="card-img-top w-100 d-block">
+                        <div class="card-deck text-center service-cards">
+                            <div class="card"><i class="material-icons service-cards__icon">developer_board</i>
                                 <div class="card-body">
-                                    <h4 class="card-title">Title</h4>
-                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><button class="btn btn-primary" type="button">Button</button></div>
+                                    <h4 class="card-title service-cards__title">TALENT RECRUITMENT</h4><p class="card-text service-cards__text">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+</p></div>
                             </div>
-                            <div class="card"><img class="card-img-top w-100 d-block">
+                            <div class="card"><i class="material-icons service-cards__icon">leak_add</i>
                                 <div class="card-body">
-                                    <h4 class="card-title">Title</h4>
-                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><button class="btn btn-primary" type="button">Button</button></div>
+                                    <h4 class="card-title service-cards__title">HR CONSULTING</h4><p class="card-text service-cards__text">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+</p></div>
                             </div>
-                            <div class="card"><img class="card-img-top w-100 d-block">
+                            <div class="card"><i class="material-icons service-cards__icon">grain</i>
                                 <div class="card-body">
-                                    <h4 class="card-title">Title</h4>
-                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><button class="btn btn-primary" type="button">Button</button></div>
+                                    <h4 class="card-title service-cards__title">TALENT SOLUTIONS</h4><p class="card-text service-cards__text">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+</p></div>
                             </div>
                         </div>
                     </div>
