--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:200,300,400">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/scss/main.compiled.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -40,25 +41,25 @@
         </div>
     </header>
     <main class="main">
-        <section class="services-section my-5">
+        <section class="services-section my-5 py-5">
             <div class="container">
                 <h2 class="text-center section-heading">Our Services</h2>
                 <div class="row">
                     <div class="col">
                         <div class="card-deck text-center service-cards">
-                            <div class="card"><i class="material-icons service-cards__icon">developer_board</i>
+                            <div class="card" data-aos="fade" data-aos-delay="50" data-aos-once="true"><i class="material-icons service-cards__icon">developer_board</i>
                                 <div class="card-body">
                                     <h4 class="card-title service-cards__title">TALENT RECRUITMENT</h4><p class="card-text service-cards__text">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 </p></div>
                             </div>
-                            <div class="card"><i class="material-icons service-cards__icon">leak_add</i>
+                            <div class="card" data-aos="fade" data-aos-delay="250" data-aos-once="true"><i class="material-icons service-cards__icon">leak_add</i>
                                 <div class="card-body">
                                     <h4 class="card-title service-cards__title">HR CONSULTING</h4><p class="card-text service-cards__text">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 </p></div>
                             </div>
-                            <div class="card"><i class="material-icons service-cards__icon">grain</i>
+                            <div class="card" data-aos="fade" data-aos-delay="500" data-aos-once="true"><i class="material-icons service-cards__icon">grain</i>
                                 <div class="card-body">
                                     <h4 class="card-title service-cards__title">TALENT SOLUTIONS</h4><p class="card-text service-cards__text">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -69,9 +70,46 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                 </div>
             </div>
         </section>
+        <section class="about-section my-5 py-5">
+            <div class="container-fluid">
+                <h2 class="text-center section-heading">About us</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="about-section-left"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="about-section-right"><p class="about-section__text">
+    Established in 2019, Pamela de Wit Consulting We are a fresh service provider in the area of Human Resources. We connect Businesses and individuals with the perfect solution.
+</p>
+
+<p class="about-section__text"> 
+Our team has collectively over 30 years of experience within the field. Our vision is to be a well-known and trusted extension of resources for our customers in order to find or develop their perfect fit. 
+</p>
+
+
+
+<p class="about-section__text">
+At Pamela de Wit Consulting we value integrity toward one another and the passion for success. We also value time and strive to be an efficient service provider for the benefit of our customers.
+</p>
+
+                            <div class="row">
+                                <div class="col-sm-6 col-lg-3">
+                                    <p class="m-0 display-4"> <span class="nbanimate">127</span></p>
+                                    <h2>Satisfied clients</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/-Animated-numbers-section-BS4-.js"></script>
+    <script src="assets/js/bs-animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="assets/js/WOWSlider-about-us.js"></script>
 </body>
 
 </html>
