--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
             </div>
             <form class="form-inline" method="post">
                 <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
-                <div class="form-group"><a class="btn btn-primary btn-main" role="button" href="#meet">Read more</a></div>
+                <div class="form-group"><button class="btn btn-primary btn-main" type="submit">Read more</button></div>
             </form>
         </div>
     </div>
@@ -258,7 +258,7 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
                         <div class="form-group"><input class="form-control form-control-lg" type="text" required="" placeholder="Name *"></div>
                         <div class="form-group"><input class="form-control form-control-lg" type="text" required="" placeholder="E-mail *" inputmode="email"></div>
                         <div class="form-group"><textarea class="form-control form-control-lg" rows="10" cols="40" placeholder="Message *"></textarea></div>
-                        <div class="form-group text-center my-5"><a class="btn btn-primary btn-main" role="button" href="#meet">Read more</a></div>
+                        <div class="form-group text-center my-5"><button class="btn btn-primary btn-main" type="submit">Read more</button></div>
                     </form>
                 </div>
             </div>
