--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </header>
     <main class="main">
-        <section class="services-section my-5 py-5">
+        <section class="services-section py-5">
             <div class="container">
                 <h2 class="text-center section-heading">Our Services</h2>
                 <div class="row">
@@ -177,7 +177,8 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
                 <div class="col-md-5 item"><img class="img-fluid my-1" src="https://i.ibb.co/jvdnttt/img-pamela-transparent-white.png" width="160px" height="160px">
                     <h3 class="name"><strong>Pamela de Wit</strong></h3>
                     <p class="title"><strong>PRINCIPAL AGENT</strong></p>
-                    <div class="social"><a href="https://fb.com" target="_blank"><i class="fa fa-facebook-official"></i></a><a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a></div>
+                    <div class="social"><a href="https://fb.com" target="_blank"><i class="fa fa-facebook-official"></i></a><a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a><a class="stretched-link" href="https://www.linkedin.com/in/pamela-de-wit-84495322"
+                            target="_blank"><i class="fa fa-linkedin"></i></a></div>
                 </div>
                 <div class="col-md-7 item">
                     <div data-aos="fade-left" data-aos-once="true" class="about-section__text p-5">
@@ -249,7 +250,7 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
             </form>
         </div>
     </div>
-    <section class="contact">
+    <section class="contact py-5">
         <div class="container">
             <h2 class="text-center section-heading">Way to contact us</h2>
             <div class="row">
@@ -294,8 +295,10 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
                             <li><a href="#">Benefits</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-instagram"></i></a>
-                        <p class="copyright">pameladewitconsulting © 2020&nbsp;</p>
+                    <div class="col-lg-3 item social"><a href="https://fb.com/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/in/pamela-de-wit-84495322" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a
+                            href="#"><i class="fa fa-instagram"></i></a>
+                            <p class="copyright">pameladewitconsulting © 2020&nbsp;</p>
                     </div>
                 </div>
             </div>
