--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav text-uppercase ml-auto navi">
                             <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Home</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="#">About Us</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">About Us</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="#">Services</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="#">News</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="#">Contact Us</a></li>
@@ -117,7 +117,7 @@ Our team has collectively over 30 years of experience within the field. Our visi
 <p class="about-section__text">
 At Pamela de Wit Consulting we value integrity toward one another and the passion for success. We also value time and strive to be an efficient service provider for the benefit of our customers.
 </p>
-</div><a class="btn btn-primary btn-main" role="button" href="#about">Read more</a></div>
+</div><a class="btn btn-primary btn-main" role="button" href="about.html">Read more</a></div>
                     </div>
                 </div>
             </div>
@@ -177,8 +177,7 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
                 <div class="col-md-5 item"><img class="img-fluid my-1" src="https://i.ibb.co/jvdnttt/img-pamela-transparent-white.png" width="160px" height="160px">
                     <h3 class="name"><strong>Pamela de Wit</strong></h3>
                     <p class="title"><strong>PRINCIPAL AGENT</strong></p>
-                    <div class="social"><a href="https://fb.com" target="_blank"><i class="fa fa-facebook-official"></i></a><a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a><a class="stretched-link" href="https://www.linkedin.com/in/pamela-de-wit-84495322"
-                            target="_blank"><i class="fa fa-linkedin"></i></a></div>
+                    <div class="social"><a href="https://fb.com" target="_blank"><i class="fa fa-facebook-official"></i></a><a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://www.linkedin.com/in/pamela-de-wit-84495322" target="_blank"><i class="fa fa-linkedin"></i></a></div>
                 </div>
                 <div class="col-md-7 item">
                     <div data-aos="fade-left" data-aos-once="true" class="about-section__text p-5">
@@ -259,7 +258,7 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
                         <div class="form-group"><input class="form-control form-control-lg" type="text" required="" placeholder="Name *"></div>
                         <div class="form-group"><input class="form-control form-control-lg" type="text" required="" placeholder="E-mail *" inputmode="email"></div>
                         <div class="form-group"><textarea class="form-control form-control-lg" rows="10" cols="40" placeholder="Message *"></textarea></div>
-                        <div class="form-group text-center my-5"><button class="btn btn-primary btn-main" type="submit">Read more</button></div>
+                        <div class="form-group text-center my-5"><button class="btn btn-primary btn-main" type="submit">Send</button></div>
                     </form>
                 </div>
             </div>
@@ -273,7 +272,7 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
                         <h3>Quick Links</h3>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li><a href="#">Our Sevices</a></li>
                             <li><a href="#">News</a></li>
                             <li><a href="#">Contact Us</a></li>
