Added more pages

--- a/about.html
+++ b/about.html
@@ -21,7 +21,140 @@
 </head>
 
 <body>
-    <h1 class="text-black-50">Heading</h1>
+    <header>
+        <div class="banner-top">
+            <div class="row no-gutters">
+                <div class="col-md-9 mx-auto">
+                    <div class="list-group list-group-horizontal-md text-center banner-top__inner"><a class="list-group-item list-group-item-action d-xl-flex justify-content-center align-items-center banner-top__item" href="tell:+270123456789"><i class="fa fa-phone banner-top__icon"></i><span>Tell: +27 012-345-6789</span></a>
+                        <a
+                            class="list-group-item list-group-item-action"><span>List Group Item 2</span></a><a class="list-group-item list-group-item-action"><span>List Group Item 3</span></a></div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <nav class="navbar navbar-light navbar-expand-md">
+                <div class="container-fluid"><a class="navbar-brand" href="#" style="background-size: cover;"><img src="https://i.ibb.co/FhsRn4b/Pamela-De-Wit-Logo-Transparent.png" style="width: 150px;height: 100px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                    <div
+                        class="collapse navbar-collapse" id="navcol-1">
+                        <ul class="nav navbar-nav text-uppercase ml-auto navi">
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" href="about.html">About Us</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="#">Services</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="#">News</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="#">Contact Us</a></li>
+                        </ul>
+                </div>
+        </div>
+        </nav>
+        <div class="row">
+            <div class="col-12 px-0">
+                <div class="text-center d-flex d-lg-flex justify-content-center align-items-center hero hero--about">
+                    <h4 class="hero__heading hero__heading--main"><span class="hero__heading hero__heading--sub d-block">About us</span><span class="hero__heading hero__heading--main">Our Commitment To you!</span></h4>
+                </div>
+            </div>
+        </div>
+        </div>
+    </header>
+    <main class="about-page">
+        <section class="about-page__intro">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-5 mx-auto">
+                        <h2 class="text-center section-heading mb-5">Our Mission</h2>
+                        <p class="lead">We headhunt those with passion to commitment. We offer solutions through our Talent Management Strategy. We foster relationships. We promote diversity</p>
+                    </div>
+                    <div class="col-md-5 mx-auto">
+                        <h2 class="text-center section-heading mb-5">Our Values</h2>
+                        <p class="lead">Integrity Toward One Another Passion For Success Commitment.Finding the perfect solution.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-page__section-about text-white py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 mx-auto">
+                        <h2 class="text-center section-heading my-5">About&nbsp;Pamela de Wit Consulting</h2>
+                        <div class="about-page__section-about__inner text-center">
+                            <p class="lead">Established in 2019, Pamela de Wit Consulting is a fresh service provider in the area of human resources. We connect businesses and individuals with the perfect solution. Our core focus areas are – Talent Recruitment Talent
+                                Solutions HR Consulting Our team has collectively over 30 years of experience within the field. Our vision is to be a well-known and trusted extension of resources for our customers in order to find or develop their perfect
+                                fit.&nbsp;</p>
+                            <p class="lead">Our mission is to simplify complicated processes, deal only with passionate people, coach and nurture strategy, foster relationships and promote diversity. At Pamela de Wit Consulting we value integrity toward one another and
+                                the passion for success. We also value time and strive to be an efficient service provider for the benefit of our customers. Through our collaborative approach, we have committed partners who help us to service the perfect
+                                solution. Our set of capabilities is further enhanced by ensuring we only collaborate with subject matter experts.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <div class="newsletter-subscribe">
+        <div class="container">
+            <div class="intro">
+                <h2 class="text-center">Subscribe for our Newsletter</h2>
+                <p class="text-center">Get weekly updates from our team of profetionals. <br>We do not to invade your inbox</p>
+            </div>
+            <form class="form-inline">
+                <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
+                <div class="form-group"><button class="btn btn-primary btn-main" type="submit">Subscribe</button></div>
+            </form>
+        </div>
+    </div>
+    <section class="contact py-5">
+        <div class="container">
+            <h2 class="text-center section-heading">Way to contact us</h2>
+            <div class="row">
+                <div class="col-md-8 mx-auto">
+                    <form class="contact__form">
+                        <div class="form-group"><input class="form-control form-control-lg" type="text" required="" placeholder="Name *"></div>
+                        <div class="form-group"><input class="form-control form-control-lg" type="text" required="" placeholder="E-mail *" inputmode="email"></div>
+                        <div class="form-group"><textarea class="form-control form-control-lg" rows="10" cols="40" placeholder="Message *"></textarea></div>
+                        <div class="form-group text-center my-5"><button class="btn btn-primary btn-main" type="submit">Send</button></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="footer-clean">
+        <footer>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Quick Links</h3>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="#">Our Sevices</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3><strong>Our Core Focus Areas</strong></h3>
+                        <ul>
+                            <li><a href="#">Talent Recruitment</a></li>
+                            <li><a href="#">Talent Solutions</a></li>
+                            <li><a href="#">HR Consulting</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Careers</h3>
+                        <ul>
+                            <li><a href="#">Job openings</a></li>
+                            <li><a href="#">Employee success</a></li>
+                            <li><a href="#">Benefits</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 item social"><a href="https://fb.com/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/in/pamela-de-wit-84495322" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a
+                            href="#"><i class="fa fa-instagram"></i></a>
+                            <p class="copyright">pameladewitconsulting © 2020&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <div class="text-white text-center my-3"><small>Developed by &nbsp;<a href="http://plain-creatives.co.za/" target="_blank" class="text-white">plain-creatives</a></small></div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
