--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                         <ul class="nav navbar-nav text-uppercase ml-auto navi">
                             <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Home</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">About Us</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="#">Services</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="#">News</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="#">Contact Us</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Services</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" href="#">News</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Contact Us</a></li>
                         </ul>
                 </div>
         </div>
         </nav>
         <div class="row">
             <div class="col-12 px-0">
-                <div class="text-center d-flex d-lg-flex align-items-center justify-content-lg-center hero">
+                <div class="text-center d-flex d-lg-flex justify-content-center align-items-center hero">
                     <h4 class="hero__heading hero__heading--main"><span>Passion For Success</span><span class="hero__heading hero__heading--sub d-block">Finding the perfect solution</span><span class="hero__heading hero__heading--slug">Our network provides our clients with the subject matter expert to deliver upon the request of our clients. We offer a full set of capabilities whenever the need arises</span></h4>
                 </div>
             </div>
@@ -97,12 +97,12 @@
         </section>
         <section class="about-section pt-5">
             <div class="container-fluid">
-                <h2 class="text-center section-heading">About us</h2>
                 <div class="row">
                     <div class="col-md-6 px-0">
                         <div class="about-section-left"></div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 px-0 bg-light">
+                        <h2 class="text-center section-heading">About us</h2>
                         <div class="about-section-right">
                             <div data-aos="fade-left" data-aos-once="true"><p class="about-section__text">
     Established in 2019, Pamela de Wit Consulting We are a fresh service provider in the area of Human Resources. We connect Businesses and individuals with the perfect solution.
@@ -114,9 +114,7 @@ Our team has collectively over 30 years of experience within the field. Our visi
 
 
 
-<p class="about-section__text">
-At Pamela de Wit Consulting we value integrity toward one another and the passion for success. We also value time and strive to be an efficient service provider for the benefit of our customers.
-</p>
+
 </div><a class="btn btn-primary btn-main" role="button" href="about.html">Read more</a></div>
                     </div>
                 </div>
@@ -125,7 +123,7 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
         <section class="misson-section pb-5 bg-white">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6 bg-white">
+                    <div class="col-md-6 px-0 bg-light">
                         <h2 class="text-center section-heading">Our Mission</h2>
                         <div class="misson-section-left">
                             <div data-aos="fade-right" data-aos-once="true">
@@ -245,7 +243,7 @@ At Pamela de Wit Consulting we value integrity toward one another and the passio
             </div>
             <form class="form-inline" method="post">
                 <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
-                <div class="form-group"><button class="btn btn-primary btn-main" type="submit">Read more</button></div>
+                <div class="form-group"><button class="btn btn-primary btn-main" type="submit">Subscribe</button></div>
             </form>
         </div>
     </div>
